--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         <h2>Data Analytiker og Student</h2>
         <hr />
 
-        <h2><a href="./public/movie-ranking.html">Movie Ranking Project</a></h2>
-        <img src="./assets/images/movie-ranking.png" height="200">
+        <h2><a href="./public/CV-Vitnemål.html">CV og Vitnemål</a></h2>
+        <img src="./assets/images/cv-vitnemål.png" height="200">
 
         <h2><a href="./public/birthday-invite.html">Birthday Invite Project</a></h2>
         <img src="./assets/images/birthday-invite.png" height="400">
         <hr />
 
-        <a href="./public/about.html">About Me</a>
-        <a href="./public/contact.html">Contact Me</a>
+        <a href="./public/ommeg.html">Om Meg</a>     
+        <a href="./public/kontaktmeg.html">Kontakt Meg</a>
     </body>
 </html>
