Lagt til vitnemål og badstu html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="no">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jonas Kemi</title>
     </head>
 
@@ -9,6 +10,7 @@
         <h1>Jonas Kemi</h1>
         <h2>Data Analytiker og Student</h2>
         <hr />
+        <h2><a href="./public/badstutemp.html">Badstu temperatur</a></h2>
 
         <h2><a href="./public/CV-Vitnemål.html">CV og Vitnemål</a></h2>
         <img src="./assets/images/cv-vitnemål.png" height="200">
@@ -20,4 +22,7 @@
         <a href="./public/ommeg.html">Om Meg</a>     
         <a href="./public/kontaktmeg.html">Kontakt Meg</a>
     </body>
+    <footer>
+        <p>© 2024 Jonas Kemi</p>
+    </footer>
 </html>
