--- a/public/CV-Vitnemål.html
+++ b/public/CV-Vitnemål.html
@@ -2,26 +2,44 @@
 <html lang="no">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CV og Vitnemål</title>
     </head>
 
     <body>
         <h1>CV og Vitnemål</h1>
-        <br />
-        <h2>CV</h2>
-        <hr />
-        <h3>Fraktal</h3>
-        <h4>09/2023 - </h4>
-        <p>Data Analytiker</p>
-        <h3>SATS</h3>
-        <h4>10/2023 - </h4>
-        <p>Gruppeinstruktør på SATS Carl Berner og tilkallingshjelp ved flere sentre</p>
-        <h3>Personlig Trener / Online Coaching</h3>
-        <h4>04/2017 - 10/2023</h4>
-        <p>Personlig trener ved flere treningssentere på Jessheim, og drevet enkeltpersonsforetak som Online Coach</p>
-        <br />
+            <br />
+        <h2>Utdanning</h2>
+            <hr />
+        <h3>OsloMet <br/>(08/2023 - 08/2025)</h3> 
+            <p>Master i Datavitenskap (ACIT) </p><br />
+        <h3>Høyskolen Kristiania <br/>(08/2020 - 06/2023)</h3> 
+            <p>Bachelor i Data Science</p><br />
+        <h3>Akademiet for Personlig Trener (AFPT) <br/>(01/2017 - 04/2018)</h3> 
+            <p>Personlig trening og kostholdveileder med studiepoeng </p><br />
+        <h3>Videregående Skole (Nannestad og Jessheim) <br/>(08/2013 - 06/2016)</h3> 
+            <p>Studiespesialisering</p><br />    
+
+        <h2>Erfaring</h2>
+            <hr />
+        <h3>Fraktal Norge AS <br/>(10/2023 - )</h3>
+            <p>Data Analytiker</p>
+            <br />
+        <h3>SATS AS <br/>(11/2022 -)</h3>
+            <p>Gruppeinstruktør på SATS Carl Berner og Jessheim. Tilkallingshjelp ved flere sentre</p> 
+            <br />
+        <h3>Online Coaching (ENK PT JONAS KEMI / EVO Jessheim)<br/>(08/2021 - 11/2023)</h3>
+            <p>Drev enkeltpersonsforetak som Online Coach og Personlig trener på EVO Jessheim</p>
+            <br />
+        <h3>Personlig Trener<br/>(03/2017 - 07/2021)</h3>
+            <p>Drev enkeltpersonsforetak som Online Coach</p>
+            <br />
+        
         <h2>Vitnemål</h2>
-        <hr />
+            <hr />
         
     </body>
+    <footer>
+        <p>© 2024 Jonas Kemi</p>
+    </footer>
 </html>
