--- a/public/badstutemp.html
+++ b/public/badstutemp.html
@@ -6,7 +6,7 @@
     <title>Badstutemperatur</title>
 </head>
 <body>
-    Hello World
+    Hello World test commit
 </body>
 <footer>
     <p>© 2024 Jonas Kemi</p>
