--- a/public/kontaktmeg.html
+++ b/public/kontaktmeg.html
@@ -2,6 +2,7 @@
 <html lang="no">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jonas Kemi</title>
     </head>
 
@@ -15,4 +16,7 @@
           Norge <br />
         </p>
     </body>
+    <footer>
+        <p>© 2024 Jonas Kemi</p>
+    </footer>
 </html>
