--- a/public/ommeg.html
+++ b/public/ommeg.html
@@ -2,6 +2,7 @@
 <html lang="no">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jonas Kemi</title>
     </head>
 
@@ -39,4 +40,7 @@
           Det gir meg mye mer når vi klarer å løse et problem, enn når jeg gjør det alene.
         </p>
     </body>
+    <footer>
+      <p>© 2024 Jonas Kemi</p>
+  </footer>
 </html>
