--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="no">
     <head>
+        <link
+            rel="stylesheet"
+            href=".styles.css"
+        />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jonas Kemi</title>
+        
     </head>
 
     <body>
