--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Første projektet</title>
     </head>
 
@@ -22,4 +23,7 @@
 <h3>This is where you need to go:</h3>
 <p><a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google maps link</a></p>
     </body>
+<footer>
+    <p>© 2024 Jonas Kemi</p>
+</footer>
 </html>
