lots of changes

--- a/public/badstutemp.html
+++ b/public/badstutemp.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Badstutemperatur</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    Hello World test commit
+    <div class="badstuhead">
+        <h1>Badstutemperatur</h1>
+    <div class="badstu">
+    <label for="StationSelect">Select Station:</label>
+    <select id="StationSelect">
+        </select>
+    <div id="temperatureDisplay">Latest Temperature: </div>
+    </div>
+    </div>
+    <script src="../script.js"></script>
 </body>
 <footer>
+    <hr />
     <p>© 2024 Jonas Kemi</p>
 </footer>
 </html>
