--- a/index.html
+++ b/index.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
 <html lang="no">
     <head>
-        <link
-            rel="stylesheet"
-            href=".styles.css"
-        />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jonas Kemi</title>
-        
+        <link rel="stylesheet" href="./styles.css"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
 
     <body>
+    <div>
         <h1>Jonas Kemi</h1>
         <h2>Data Analytiker og Student</h2>
-        <hr />
+    </div>
+    <hr />
+    <div>
         <h2><a href="./public/badstutemp.html">Badstu temperatur</a></h2>
+    </div>
 
+    <div>
         <h2><a href="./public/CV-Vitnemål.html">CV og Vitnemål</a></h2>
         <img src="./assets/images/cv-vitnemål.png" height="200">
+    </div>
 
+    <div>
         <h2><a href="./public/birthday-invite.html">Birthday Invite Project</a></h2>
-        <img src="./assets/images/birthday-invite.png" height="400">
-        <hr />
-
+        <img src="./assets/images/birthday-invite.png" width=100%>
+    </div>
+    <hr />
+    <div>
         <a href="./public/ommeg.html">Om Meg</a>     
         <a href="./public/kontaktmeg.html">Kontakt Meg</a>
+    </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
+
+    <div>
     <footer>
         <p>© 2024 Jonas Kemi</p>
     </footer>
+    </div>
 </html>
