--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
 
-    <body>
+    <body class="frontpage">
     <div>
         <h1>Jonas Kemi</h1>
-        <h2>Data Analytiker og Student</h2>
+<!--        <h2>Data Analytiker og Student</h2>-->
     </div>
     <hr />
-    <div>
+    <div class="frontpagediv">
         <h2><a href="./public/badstutemp.html">Badstu temperatur</a></h2>
     </div>
-
+<!--    
     <div>
         <h2><a href="./public/CV-Vitnemål.html">CV og Vitnemål</a></h2>
         <img src="./assets/images/cv-vitnemål.png" height="200">
@@ -27,17 +27,19 @@
         <h2><a href="./public/birthday-invite.html">Birthday Invite Project</a></h2>
         <img src="./assets/images/birthday-invite.png" width=100%>
     </div>
+
+-->
     <hr />
+<!--   
     <div>
         <a href="./public/ommeg.html">Om Meg</a>     
         <a href="./public/kontaktmeg.html">Kontakt Meg</a>
     </div>
-
+-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
-
     <div>
-    <footer>
+    <footer style="text-align: left;">
         <p>© 2024 Jonas Kemi</p>
     </footer>
     </div>
